# CityZero

./: .env.example  .gitignore  DOWNLOADER_USAGE.md  README.md  download_images.py  main.py  pyproject.toml  requirements.txt  test_mapillary.py
blobs/2026-03-28/: code.age  entry.age
blobs/2026-03-30/: code.age  entry.age
blobs/2026-03-31/: code.age  entry.age
blobs/2026-04-03/: code.age  entry.age
blobs/2026-04-08/: code.age  entry.age
blobs/2026-04-13/: code.age  entry.age
data/geodata/: visualize_coordinates.py
local_tests/: README.md  lambda_build_colmap_cuda.py  lambda_glomap_preprocessing.py  lambda_train_gsplat.py  run_brush_training.py  train_gaussian_mac.py
local_tests/scripts/: README.md  download_from_lambda.sh  upload_to_lambda.sh  youtube_splits.py
mapillary/: README.md  cli.py  client.py  config.py  database.py  db.py  downloader.py
scripts/: get_gps_coords.py
src/cityzero/: README.md  __init__.py  cli.py  client.py  config.py  downloader.py  get_gps_coords.py  mapillary.py  mapillary_client.py  mapillary_downloader.py
wip/: README.md  build_colmap.py  lambda_build_colmap_cuda.py  log.txt  views.py
wip/core/: build_colmap.py  build_colmap_amd.py  extract_features.py  feature_matching.py  geo_feature_matching.py  mapper.py  mapper_tuned.py  matches_importer.py  query_expansion.py  reconstruction.py  vocab_tree.py
wip/legacy/: README.md  mapper_tuned_v2.py  run_brush_training.py
wip/scripts/: README.md  check_images.py  cookies.txt  download_images.py  download_pairs.py  filter_database.py  gdrive_backup.py  inlier_filter.py  (+2 more)
(+24 files in other folders)
