[project]
name = "cityzero"
version = "0.1.0"
description = "Virtual City Simulation Platform - 3D city reconstruction from street imagery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mapillary>=1.0.15",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cityzero"]
