[project]
name = "cityzero"
version = "0.1.0"
description = "CLI tool for bulk downloading Mapillary street-view images by bounding box"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.0",
    "mapillary>=1.0.15",
    "piexif>=1.1.3",
    "python-dotenv>=1.2.1",
    "questionary>=2.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
